--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -1,33 +1,19 @@
 /*------------------------------------------------------------------------*/
 /*------------------------------------------------------------------------*/
+
+nav a:hover{
+    text-decoration: underline;
+}
+
 body{
     font-family: sans-serif;
     margin: 0;
-}
-
-header {
-    background-color: #a07f5e; /* Color de fondo del encabezado */
-    padding: 5px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-height: auto;
 }
 
 a{
     text-decoration: none;
     color:#212121
 }
-
-.logo{
-    display: flex;
-    align-items: center;
-}
-.logo img {
-    height: 75px;
-    margin-right: 10px;
-}
-
 
 /*------------------------------------------------------------------------*/
 /*------------------------------------------------------------------------*/
@@ -56,49 +42,7 @@ nav ul li:first-child {
 /*------------------------------------------------------------------------*/
 /* contiene los botones del menu*/
 
-.button {
-    cursor: pointer;
-    position: relative;
-    padding: 10px 24px;
-    font-size: 18px;
-    color: rgb(193, 163, 98);
-    border: 2px solid rgb(193, 163, 98);
-    border-radius: 34px;
-    background-color: transparent;
-    font-weight: 600;
-    transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
-    overflow: hidden;
-    }
-    .button::before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    margin: auto;
-    width: 50px;
-    height: 50px;
-    border-radius: inherit;
-    scale: 0;
-    z-index: -1;
-    background-color: rgb(193, 163, 98);
-    transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
-    }
-    .button:hover::before {
-    scale: 3;
-    }
-    .button:hover {
-    color: #212121;
-    
-    scale: 1.1;
-    box-shadow: 0 0px 20px rgb(161,126,126);
-    }
-    .button:active {
-    scale: 1;
-    }
-
-
-.content {
-    flex: 2; /* Hace que el contenido ocupe todo el espacio restante */
-}
+S
 /*------------------------------------------------------------------------*/
 /*------------------------------------------------------------------------*/
 footer {
