--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -1,208 +1,45 @@
-/*------------------------------------------------------------------------*/
-/*------------------------------------------------------------------------*/
 
-nav a:hover{
-    text-decoration: underline;
-}
-
-body{
-    font-family: sans-serif;
-    margin: 0;
-}
-
-a{
-    text-decoration: none;
-    color:#212121
-}
-
-/*------------------------------------------------------------------------*/
-/*------------------------------------------------------------------------*/
-/* contiene nav*/
-nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-nav ul li {
-    margin-left: 10px;
-}
-
-nav ul li:first-child {
-    margin-left: 0;
-}        
-/*------------------------------------------------------------------------*/
-/*------------------------------------------------------------------------*/
-/* contiene los botones del menu*/
-
-S
-/*------------------------------------------------------------------------*/
-/*------------------------------------------------------------------------*/
-footer {
-    background-color: #a07f5e;
-    color: #fff;
-    padding: 20px;
-    text-align: left;
-    bottom: 0;
-
-
-}
-
-.footer-text {
-    font-size: 0.2em; /* Tamaño de fuente reducido */
-    line-height: 1.5;
-}
-
-.footer-text p {
-    font-size: 0.2em; /* Tamaño de fuente más pequeño para el párrafo */
-    margin: 0; /* Eliminar el margen predeterminado del párrafo */
-    padding: 0; /* Eliminar el padding predeterminado del párrafo */
-}
-
-.footer-text a {
-    color: #fff;
-    text-decoration: underline;
-}
-
-.footer-text a:hover {
-    color: #ccc;
-}
-
-/* Estilos adicionales para el texto de copyright */
-.copyright-text {
-    position: initial;
-    bottom: 5px; /* Colocar en la esquina inferior izquierda */
-    left: 20px; /* Colocar en la esquina inferior izquierda */
-    margin: 0;
-}
-/*------------------------------------------------------------------------*/
-/*------------------------------------------------------------------------*/
-main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.login{
-    border: 1px solid black;/*--le genera un borde--*/
-    width: 400px;/*--para el tamaño--*/
-    height: 500px;
-    background-image: url('assets/login.png');
-    /*--no me funciono pero queria ponerle un fondo al login y no logre use videos que tengo guardados en mi instagram--*/
-    color: white;
-    border-radius: 20px;
-    box-shadow: 0px 0px 20px rgba(0,0,0,0,75);
-    background-size: cover;
-    background-position: center;
-    overflow: hidden;
-}
-form{
+/*                           FORMULARIO DEL LOGIN                                     */
+/*                        Estilos para el formulario                                  */
+    .login-form {
     display: block;
     box-sizing: border-box;
     padding: 40px;
-    width: 100%;
-    height: 100%;
+    width: 400px; /* Ancho de la caja sombreada */
+    height: 500px; /* Alto de la caja sombreada */
     backdrop-filter: brightness(40%);
     flex-direction: column;
     display: flex;
-    gap: 5px;
+    gap: 20px; /* Espacio entre cada elemento */
     background-position: center;
+    justify-content: center; /* Centrar verticalmente */
+    align-items: center; /* Centrar horizontalmente */
+    border-radius: 40%; /* Le Agrega un borde redondo a la caja contenedora de l formulario*/
 }
-.LOG {font-weight: normal;
+
+.login-heading {
+    font-weight: normal;
     font-size: 24px;
-    text-shadow: 0px 0px 2px rgba(0,0,0,0,5);
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
     margin-bottom: 60px;
+    color: #ffffff; /* Cambiar color del texto */
 }
-label{
-    color: rgba(255,255,255,0.8);
+
+.login-form label {
+    color: rgba(255, 255, 255, 0.8);
     text-transform: uppercase;
     font-size: 10px;
     letter-spacing: 2px;
     padding-left: 10px;
 }
-input{
-    background-color: rgba(255,255,255,0.3);
+
+.login-form input {
+    background-color: rgba(255, 255, 255, 0.3);
     height: 40px;
     line-height: 40px;
     border-radius: 20px;
     padding: 0px 20px;
     border: none;
     margin-bottom: 20px;
-    color: white;
-
-}
-
-
-/*------------------------------------------------------------------------*/
-/*-------------------------------GALERIA-----------------------------------------*/
-.galeria{
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 20px;
-}
-.alcohol{
-    border-radius: 10px;
-    background-color: wheat;
-    width: 350px;
-
-}
-.alcohol:hover{
-    box-shadow: 0 10px 20px rgba(0,0,0,0.20);
-
-}
-.alcohol img{
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-    border-radius: 10px 10px 0 0;
-
-
-}
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .square {
-    border: 1px solid black;
-    background-color: white;
-    width: 300px;
-    height: auto;
-    margin: 10px;
-  }
-  
-  .image-container {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border: 1px solid black;
-  }
-  
-  .info-container {
-    padding: 20px;
-  }
-/*------------------------------------------------------------------------*/
-/*------------------------------------------------------------------------*/
-@media(max-width:700px){
-    header{
-        flex-direction: column;
-    }
-
-    nav{
-        padding: 10px 0px;
-    }
+    color: #ffffff; /* Cambiar color del texto */
 }
